# journald-writer

./: Cargo.toml  Makefile  config.example.yml
src/: main.rs  writer.rs
