[package]
name = "journald-writer"
version = "0.1.0"
authors = ["The journald-writer Authors <oss@nyantec.com>"]
edition = "2018"
license = "MirOS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
nix = "0.22.0"
log = "0.4"
env_logger = "0.8"
chrono = "0.4"
serde_yaml = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
getopts = "0.2"

log-writer = { version = "0.3", features = [ "serde" ] }
journald = { git = "https://github.com/nyantec/rust-journald", rev = "192fd851e79d8172c90ae21b2dceb51a08f1cfce" }
