[package]
name = "journald-writer"
version = "0.1.0"
repository = "https://github.com/nyantec/rust-journald"
authors = ["The journald-writer Authors <oss@nyantec.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
nix = "0.22.0"
log = "0.4"
env_logger = "0.8"
chrono = "0.4"
serde_yaml = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
getopts = "0.2"

log-writer = { version = "0.6", features = [ "serde" ] }
# journald = "0.7"
journald = { git = "https://github.com/nyantec/rust-journald.git", branch = "seek-since-boot" }
